deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avatar
  labels:
    name: avatar
    app.kubernetes.io/part-of: gophprofile
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
