deploy/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avatar-service
  namespace: avatar
  labels:
    app: avatar-service
    app.kubernetes.io/part-of: gophprofile
spec:
  type: ClusterIP
  selector:
    app: avatar-service
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
