deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avatar-ingress
  namespace: avatar
  labels:
    app: avatar-service
    app.kubernetes.io/part-of: gophprofile
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: avatars.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avatar-service
                port:
                  number: 80
